--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,8 @@
     <link rel="icon" href="./eye.ico">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <!-- <script src="https://cdn.jsdelivr.net/npm/chart.js@3.0.2/dist/chart.min.js"></script> -->
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <!-- <title><%= htmlWebpackPlugin.options.title %></title> -->
+    <title>واو ــ وبلاگی درمورده اطلاعات فریمورک ویو‌جی‌اس</title>
   </head>
   <body>
     <noscript>
